<resources>
    <string name="app_name">CS355_asgn2</string>
    <string name="txt0">Assignment2</string>
    <string name="txt1">Name</string>
    <string name="txt2">Lastname</string>
    <string name="txt3">Date of Birth</string>
    <string name="txt4">e-mail</string>
    <string name="txt5">PhoneNo.</string>
    <string name="txt6">Age</string>
    <string name="btn1">Submit</string>

    <string name="change_date">set</string>

    <string-array name="gender_array">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Miss</item>
        <item>Ms.</item>
        <item>Dr.</item>
        <item>Buddhist Monk</item>
        <item>Rev.</item>
        <item>M.L.</item>
        <item>M.R.</item>
        <item>M.C.</item>
        <item>Emeritus Professor</item>
        <item>Professor</item>
        <item>Assistant Professor</item>
        <item>Associate Professor</item>
    </string-array>

    <string name="rbt1">File</string>
    <string name="rbt2">Pref.Obj.</string>

</resources>
